--- a/debian/tarantool-common.install.sysvinit.in
+++ b/debian/tarantool-common.install.sysvinit.in
@@ -3,3 +3,6 @@
 /etc/tarantool/instances.available/example.lua
 /etc/logrotate.d/tarantool
 /usr/share/man/man1/tarantoolctl.1
+/usr/share/tarantool/tarantoolctl/tarantoolctl/control.lua
+/usr/share/tarantool/tarantoolctl/tarantoolctl/xlog.lua
+/usr/share/tarantool/tarantoolctl/tarantoolctl/init.lua
